# twol

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  cfg.py  fs.py  multialign.py  notes.rst  pyproject.toml  raw2named.py  setup.py  svsv-table.csv  table2words.py  twbt.py  twdiscov.py  twexamp.py  twol.py  twolcsyntax.ebnf  twparser.py  twrule.py  words2zerofilled.py  zerofilled2raw.py
docs/: .readthedocs.yaml  Makefile  alignment.rst  cfg.rst  compiletest.rst  conf.py  differences.rst  discovery.rst  formalism.rst  fs.rst  genindex.rst  glossary.rst  index.rst  intro.rst  kmkbib.bib  lexguessing.rst  modules.rst  morphophon.rst  ofilexicon.dot  ofitwol.rst  py-modindex.rst  requirements.txt  technical.rst  twdiscov.rst  twexamp.rst  twol.aligner.rst  twol.alphabet.rst  twol.cfg.rst  twol.discover.rst  twol.lexc2dot.rst  twol.raw2named.rst  twol.rst  twol.table2words.rst  twol.tester.rst  twol.twbt.rst  twol.twdiscov.rst  twol.twexamp.rst  twol.twolcomp.rst  twol.twparser.rst  twol.twrule.rst  (+3 more)
parad/: kskn-newnames.csv  kskn-zerofilled-orig.csv  kskv-affixes.csv  kskv-newnames.csv  kskv-renamed-orig.pstr  kskv-zerofilled-orig.csv
test/: afe.pstr  afe.twol  grada.twol  graderr.twol  noun.pstr  noun.twol
twol/: __init__.py  aligner.py  alphabet.py  cfg.py  discopars.py  discovdef.ebnf  discover.py  fs.py  histdiscov.py  lexc2dot.py  metric.py  multialign.py  raw2named.py  table2words.py  tester.py  twbt.py  twdiscov.py  twexamp.py  twgenerate.py  twol.py  twolcomp.py  twolcsyntax.ebnf  twparser.py  twparser.py~  twrule.py  word2entry.py  words2zerofilled.py  (+2 more)
(+67 files in other folders)
