
[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "twol"
version = "0.9"
dependencies = [
   "grapheme",
   "hfst >= 3.15",
   "TatSu-LTS"
]
requires-python = ">= 3.8"

authors = [
   {name = "Kimmo Koskenniemi", email = "koskenni@gmail.com"}
]
maintainers = [
   {name = "Kimmo Koskenniemi", email = "koskenni@gmail.com"}
]
description = "Tools for simplified two-level morphology"
readme = "README.md"
license = "GPL-3.0-or-later"

[project.scripts]
twol-aligner = "twol.aligner:main"
twol-metric = "twol.metric:main"
twol-multialign = "twol.multialign:main"
twol-table2words = "twol.table2words:step1"
twol-words2zerofilled = "twol.words2zerofilled:main"
twol-zerofilled2raw = "twol.zerofilled2raw:main"
twol-raw2named = "twol.raw2named:main"
twol-comp = "twol.twolcomp:main"
twol-examples2fst = "twol.twexamp:main"
twol-discov =  "twol.discover:main"
twol-tester = "twol.tester:main"
twol-lexc2dot = "twol.lexc2dot:main"
twol-wordset2entry = "twol.wordset2entry:main"
twol-generate = "twol.twgenerate:main"
twol-word2entry = "twol.word2entry:main"